DOM: Do not skip 'replace data' operation on setting identical string to CharacterData.

According to the standard, we should not skip to replace the data.
https://dom.spec.whatwg.org/#dom-characterdata-data
https://dom.spec.whatwg.org/#concept-cd-replace

The new behavior matches to Edge, Firefox and Safari.
This CL might affect micro benchmarks, but it's expected.

BUG=689807

Review-Url: https://codereview.chromium.org/2686793002
Cr-Commit-Position: refs/heads/master@{#448921}

Former-commit-id: d44dd6aa2f437590e4fb52bce5f5887f78548a83